--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <div class="container">
     <h1>Ir a Github</h1>
     <h2>Cambio desde nueva rama development</h2>
+    <h3>Cambios desde rama main</h3>
     <a href="https://github.com/">
       <img src="https://assets-cdn.github.com/images/modules/logos_page/Octocat.png" alt="octocat">
     </a>
